Actions
Bug #10752
closedfcsm: NULL pointer errors
Start date:
2019-04-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
NULL pointer errors:
In file included from /code/illumos-gate/proto/root_i386/usr/include/sys/param.h:48:0, from /code/illumos-gate/proto/root_i386/usr/include/sys/t_lock.h:38, from /code/illumos-gate/proto/root_i386/usr/include/sys/file.h:35, from ../../common/io/fibre-channel/ulp/fcsm.c:31: ../../common/io/fibre-channel/ulp/fcsm.c: In function 'fcsm_attach': /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:32:14: error: passing argument 4 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/fibre-channel/ulp/fcsm.c:433:7: note: in expansion of macro 'NULL' NULL, DDI_PSEUDO, 0) == DDI_SUCCESS) { ^~~~ In file included from /code/illumos-gate/proto/root_i386/usr/include/sys/scsi/scsi_types.h:61:0, from /code/illumos-gate/proto/root_i386/usr/include/sys/scsi/scsi.h:36, from ../../common/io/fibre-channel/ulp/fcsm.c:33: /code/illumos-gate/proto/root_i386/usr/include/sys/sunddi.h:1564:1: note: expected 'minor_t {aka unsigned int}' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 483e494a59954f25ec067f2dee3cd94a269eaa08
commit 483e494a59954f25ec067f2dee3cd94a269eaa08 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-23T19:14:36.000Z 10752 fcsm: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions